--- a/views/slides.tt
+++ b/views/slides.tt
@@ -10,7 +10,7 @@
 
 <p><strong>Intro to Dancer</strong></p>
 
-<p>Given at <a href="http://2012.yapcna.org/">YAPC::NAA 2012</a> by Mark Allen</p>
+<p>Given at <a href="https://2012.yapcna.org/">YAPC::NAA 2012</a> by Mark Allen</p>
 
 <script async class="speakerdeck-embed" data-id="4fd8f970a14e86002202f969" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script>
 
@@ -19,7 +19,7 @@
 <p><strong>Modern PerlCommerce</strong></p>
 
 <p>
-Given at <a href="http://pghpw.org/ppw2011/">Pittsburgh Perl Workshop 2011</a> by Stefan Hornburg (Racke)
+Given at <a href="https://pghpw.org/ppw2011/">Pittsburgh Perl Workshop 2011</a> by Stefan Hornburg (Racke)
 </p>
 <iframe src="//www.slideshare.net/slideshow/embed_code/key/noTgObmZ0vqOX2" width="760" height="620" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/linuxia/modern-perlcommerce" title="Modern PerlCommerce" target="_blank">Modern PerlCommerce</a> </strong> from <strong><a target="_blank" href="//www.slideshare.net/linuxia">LinuXia</a></strong> </div>
 
@@ -30,7 +30,7 @@ You can also view and download this in <a href="/slides/perlcommerce-beamer.pdf"
 <hr />
 
 <p><strong>
-<a href="http://www.slideshare.net/hashashin/dancing-tutorial">
+<a href="https://www.slideshare.net/hashashin/dancing-tutorial">
 Dancing Tutorial</a></strong></p>
 
 <p>
@@ -46,7 +46,7 @@ You can also view and download this in
 <hr />
 
 <p><strong>
-<a href="http://www.slideshare.net/xSawyer/perl-dancer-for-python-programmers" title="Perl Dancer for Python programmers">
+<a href="https://www.slideshare.net/xSawyer/perl-dancer-for-python-programmers" title="Perl Dancer for Python programmers">
 Perl Dancer for Python programmers</a>
 </strong></p>
 
@@ -62,7 +62,7 @@ You can also view and download this in
 <hr />
 
 <p><strong>
-<a href="http://www.slideshare.net/asukrieh/perl-dancer-fpw-2010-4482016">
+<a href="https://www.slideshare.net/asukrieh/perl-dancer-fpw-2010-4482016">
 Perl Dancer, FPW 2010</a>
 </strong>
 </p>
@@ -79,7 +79,7 @@ Given by Alexis Sukrieh at French Perl Workshop, 11th June 2010, Calais
 <hr />
 
 <p><strong>
-<a href="http://www.slideshare.net/asukrieh/writing-webapps-with-perl-dancer">
+<a href="https://www.slideshare.net/asukrieh/writing-webapps-with-perl-dancer">
 Writing webapps with Perl Dancer</a>
 </strong></p>
 
