--- a/views/about.tt
+++ b/views/about.tt
@@ -1,7 +1,7 @@
 <h3>Authors</h3>
 <p>
-Dancer was inspired by <a href="http://www.sinatrarb.com">Sinatra</a> 
-and has been written by <a href="http://twitter.com/sukria">Alexis Sukrieh</a>.
+Dancer was inspired by <a href="https://www.sinatrarb.com">Sinatra</a> 
+and has been written by <a href="https://twitter.com/sukria">Alexis Sukrieh</a>.
 Many more authors now contribute to the project - see the 
 <a href="https://metacpan.org/pod/Dancer2#AUTHORS">AUTHORS</a> file shipped
 with the distribution for the core team.
@@ -23,12 +23,12 @@ Dancer is free software, it is released under the same terms as Perl itself.
 
 <p>
 Feel free to <a
-href="http://lists.preshweb.co.uk/mailman/listinfo/dancer-users">subscribe to 
+href="https://lists.preshweb.co.uk/mailman/listinfo/dancer-users">subscribe to 
 the mailing list</a> if you want to contact users and developers of the project. 
-You can also <a href="http://lists.preshweb.co.uk/pipermail/dancer-users/">read
+You can also <a href="https://lists.preshweb.co.uk/pipermail/dancer-users/">read
 the list archives</a>.
 
-<form target="_blank" action="http://www.google.com/search" method="get">
+<form target="_blank" action="https://www.google.com/search" method="get">
 <input type=hidden name="q" value="site:lists.perldancer.org" />
 Search the mailing list: <input type=text name="q" size=20 value=""/>
 <input type="submit" name="foo" value="Search" />
@@ -56,7 +56,7 @@ $(document).ready( function () {
 			contribs = data.contributors;
 			$.each(contribs, function(i,user){
 				if (user.gravatar_id && user.name) {
-					var image = '<img src="http://gravatar.com/avatar/' + user.gravatar_id + '.jpg?s=48&d=identicon" alt="' + user.name + '" title="' + user.name + '" class="github_gravatar" id="'+ user.gravatar_id +'">';
+					var image = '<img src="https://gravatar.com/avatar/' + user.gravatar_id + '.jpg?s=48&d=identicon" alt="' + user.name + '" title="' + user.name + '" class="github_gravatar" id="'+ user.gravatar_id +'">';
 					$("#github_contributors").append(image);
 				}
 			});
