--- a/views/cheatsheet.tt
+++ b/views/cheatsheet.tt
@@ -1,7 +1,7 @@
 <h1>Dancer Cheat Sheet</h1>
 
 <p>
-<a href="http://blog.truecrux.org/">Vladimir Lettiev (thecrux)</a> kindly
+<a href="https://blog.truecrux.org/">Vladimir Lettiev (thecrux)</a> kindly
 produced a Dancer Cheat Sheet as a quick reference guide to the common Dancer
 DSL keywords etc.
 </p>
