--- a/views/contribute.tt
+++ b/views/contribute.tt
@@ -21,7 +21,7 @@ If you like Dancer, tell the world about it:
 <ul>
 <li>blog about it!</li>
 <li>tweet about  it!</li>
-<li><a href="http://metacpan.org/release/Dancer2">Click +1 on MetaCPAN</a></li>
+<li><a href="https://metacpan.org/release/Dancer2">Click +1 on MetaCPAN</a></li>
 <li><a href="https://github.com/PerlDancer/Dancer2">&quot;Watch&quot; the project on
 GitHub</a></li>
 <li>Dancer-related presentations at conferences etc (see the <a
@@ -61,10 +61,10 @@ users...
 
 <p>
 Feel free to <a
-href="http://lists.preshweb.co.uk/mailman/listinfo/dancer-users">subscribe to  the
+href="https://lists.preshweb.co.uk/mailman/listinfo/dancer-users">subscribe to  the
 mailing list</a> if you want to contact users and developers of the project,
 either to get or offer help. You can also check out the <a
-href="http://lists.preshweb.co.uk/pipermail/dancer-users/">list archives</a>.
+href="https://lists.preshweb.co.uk/pipermail/dancer-users/">list archives</a>.
 
 
 
@@ -78,7 +78,7 @@ href="https://github.com/PerlDancer/Dancer2/issues">report it</a> - reports via 
 <a href="https://github.com/PerlDancer/Dancer2/issues">GitHub issues</a> system are
 preferred as our development is coordinated on GitHub, but bug reports to the 
 <a
-href="http://rt.cpan.org/Public/Bug/Report.html?Queue=Dancer">rt.cpan.org 
+href="https://rt.cpan.org/Public/Bug/Report.html?Queue=Dancer">rt.cpan.org 
 queue</a> or on the mailing list are fine too.
 </p>
 
@@ -86,7 +86,7 @@ queue</a> or on the mailing list are fine too.
 <h3>Submit Patches</h3>
 
 <p>
-Okay, so you've found a bug and <a href="http://github.com/PerlDancer/Dancer2">after
+Okay, so you've found a bug and <a href="https://github.com/PerlDancer/Dancer2">after
 having forked the project</a> on GitHub you have a written patch to submit the fix, 
 that's really great. At the time, the best way to get a review is to send a pull request
 on GitHub.
