--- a/views/includes/doc-list.tt
+++ b/views/includes/doc-list.tt
@@ -1,19 +1,19 @@
 <ul>
     <li><a href="/cheatsheet">A cheatsheet</a> (PDF or ODS) by Vladimir Lettiev
     (thecrux)</li>
-    <li><a href="http://p3rl.org/Dancer2::Manual">Dancer2::Manual</a>
+    <li><a href="https://p3rl.org/Dancer2::Manual">Dancer2::Manual</a>
     - a gentle introduction to Dancer</li>
-    <li><a href="http://p3rl.org/Dancer2::Tutorial">Dancer2::Tutorial</a> - a
+    <li><a href="https://p3rl.org/Dancer2::Tutorial">Dancer2::Tutorial</a> - a
     walkthrough creating an example application</a></li>
-    <li><a href="http://p3rl.org/Dancer2::Cookbook">Dancer2::Cookbook</a> -
+    <li><a href="https://p3rl.org/Dancer2::Cookbook">Dancer2::Cookbook</a> -
     examples for achieving common tasks with Dancer</li>
-    <li><a href="http://p3rl.org/Dancer2">Dancer2</a> - main documentation,
+    <li><a href="https://p3rl.org/Dancer2">Dancer2</a> - main documentation,
     listing all the Dancer DSL keywords</li>
-    <li><a href="http://p3rl.org/Dancer2::Plugins">Dancer2::Plugins</a> - a list
+    <li><a href="https://p3rl.org/Dancer2::Plugins">Dancer2::Plugins</a> - a list
     of some recommended plugins to extend Dancer with useful features</li>
-    <li><a href="http://p3rl.org/Dancer2::Manual::Deployment">Dancer2::Manual::Deployment</a> -
+    <li><a href="https://p3rl.org/Dancer2::Manual::Deployment">Dancer2::Manual::Deployment</a> -
     how to deploy your app</li>
-    <li><a href="http://p3rl.org/Task::Dancer2">Task::Dancer2</a> - comprehensive
+    <li><a href="https://p3rl.org/Task::Dancer2">Task::Dancer2</a> - comprehensive
     list of Dancer2 plugins, template/session/logger engines, etc. on the CPAN </li>
 </ul>
 
