--- a/views/index.tt
+++ b/views/index.tt
@@ -59,7 +59,7 @@
             <pre style="margin-top: 1em;">
     $ perl bin/app.pl &
     ...
-    $ curl http://localhost:3000/
+    $ curl https://localhost:3000/
     Hello world!
     </pre>
             </li>
@@ -170,7 +170,7 @@ ajax '/getloadavg' => sub {
     </p>
 
     <p>(The example comes from the <a
-    href="http://advent.perldancer.org/2011/14">Dynamic AJAX charting with
+    href="https://advent.perldancer.org/2011/14">Dynamic AJAX charting with
     Dancer</a> 2011 Advent Calendar</a> post.)</p>
 
 </div>
@@ -217,7 +217,7 @@ ajax '/getloadavg' => sub {
 		<li><a href="<% latest.download_url %>" id="contain-download">
                 <% latest.short_version %>&nbsp;</a></li>
 	<li>You can also follow Dancer on <a
-        href="http://github.com/PerlDancer/Dancer2">GitHub</a> and on <a href="http://twitter.com/PerlDancer">Twitter</a></li>
+        href="https://github.com/PerlDancer/Dancer2">GitHub</a> and on <a href="https://twitter.com/PerlDancer">Twitter</a></li>
 	</ul>
 	
 
