Fix broken download button on landing page
MetaCPAN API v0 has been deprecated and shut down, so we could never
fill in the download information for the button. The response is
slightly different in v1 than v0, so adjusted accordingly.

The version for Dancer2 doesn't fit as cleanly as the version for
Dancer, so I removed it (and version handling) entirely.

--- a/views/index.tt
+++ b/views/index.tt
@@ -215,8 +215,8 @@ ajax '/getloadavg' => sub {
 
 
 	<ul class="clearme listreset dbc">
-		<li><a href="<% latest.download_url %>" id="contain-download">
-                <% latest.short_version %>&nbsp;</a></li>
+		<li><a href="<% latest %>" id="contain-download">
+                &nbsp;</a></li>
 	<li>You can also follow Dancer on <a
         href="https://github.com/PerlDancer/Dancer2">GitHub</a> and on <a href="https://twitter.com/PerlDancer">Twitter</a></li>
 	</ul>
