Create a framework for Core Team bios
I added a link to the Slides page to the documentation page, and removed
it from the menu to make room for a Core Team link. From there, created
a basic page that lists each of us. In subsequent commits, we can add
mini-bios for each of us.

--- a/views/documentation.tt
+++ b/views/documentation.tt
@@ -46,3 +46,8 @@ Even though special care is given to documentation, there might be some
 errors, so feel free to <a href="/about">contact the development team</a> if
 you find any.
 </p>
+
+<h3>Presentations</h3>
+<p>
+<a href="/slides" title="Presentation slides">See presentations from Dancer talks around the world!</a>
+</p>
