Close quotes for URL to Ruth's website

--- a/views/core-team.tt
+++ b/views/core-team.tt
@@ -29,7 +29,7 @@ brings you Dancer:</p>
 Dancer2 for over five years. She has written several Dancer2 plugins, and a Perl::Critic module specifically for use with
 Dancer2. Ruth is a full-time traveler, moving around North America in an RV with her husband and dog. In her free time, she's
 a musician, a crafter, and a published author. You can find her Perl work on
-<a href="https://metacpan.org/author/GEEKRUTH>CPAN</a>.
+<a href="https://metacpan.org/author/GEEKRUTH">CPAN</a>.
 
 <a id="dams"></a>
 <a id="bigpresh"></a>
