--- a/views/core-team.tt
+++ b/views/core-team.tt
@@ -12,7 +12,7 @@ brings you Dancer:</p>
 <li>Damien Krotkine (dams)</li>
 <li>David Precious (bigpresh)</li>
 <li>Franck Cuny (franckc)</li>
-<li>Jason A. Crome (CromeDome)</li>
+<li><a href="#cromedome">Jason Crome (CromeDome)</a></li>
 <li>Mickey Nasriachi</li>
 <li>Peter Mottram (SysPete)</li>
 <li>Russell Jenkins (veryrusty)</li>
@@ -34,7 +34,13 @@ a musician, a crafter, and a published author. You can find her Perl work on
 <a id="dams"></a>
 <a id="bigpresh"></a>
 <a id="franckc"></a>
-<a id="cromedome"></a>
+<a id="cromedome">Jason Crome</a>
+<p><a href="https://cromedome.dev">Jason Crome</a> is a 30 year veteran of the software industry, working on everything from local government software in Powerbuilder and SQL Server
+to custom ERP development in Perl and PostgreSQL (with a few stops in insurance, banking, and gaming along the way!). While he's worked professionally on open soure software
+in the past, Jason currently gets paid to work on ERP and CRM software powering non-profit agencies throughout the world. He is the former founder of Charlotte Perl Mongers,
+a member of Chicago.pm and MadMongers, and is a plugin author and release manager for Dancer. You can find much of Jason's work on
+<a href="https://metacpan.org/author/CROMEDOME">CPAN</a>.
+
 <a id="mickey"></a>
 <a id="syspete"></a>
 <a id="veryrusty"></a>
